12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2004.nn.nn):
=======================

- Applied patches:
   - netware_cpp.patch by Thayne Harmon (adds a part of the Netware
     support - actually it adds the code file changes).
   - netware_h.patch by Thayne Harmon (adds a part of the Netware
     support - actually it adds the header file changes).
   - netwareonly_cpp.patch by Thayne Harmon (adds a part of the
     Netware support - actually it adds new Netware specific files).
   - iometer-121603ds2-iomtrkstat-xscale.patch by Ming Zhang (adds
     Linux on XScale support for Intel IQ80321 and IQ80331 to the
     iomtr_kstat module).
   - iometer-121603ds2-xscale.patch by Ming Zhang (adds Linux on 
     XScale support for Intel IQ80321 and IQ80331).
   - iometer-121603-ds2-report_tcp.patch by Ming Zhang (rewrite of the
     Report_TCP() function for Linux - more robust when the hostname is
     not setup properly).
   - iometer-1216ds2-getnicounter.patch by Ming Zhang (bugfix for
     reading the /proc/net/dev file under Linux).     
   - iometer-2003.12.16-post.DS1-SolarisMultipleSwapDevices.patch
     by Daniel Scheibli (rework of the Get_All_Swap_Devices()
     function for Solaris - fixing a few minor inconsistencies).
   - iometer-2003.12.16-post.DS1-AlwaysSendCompletionQueue.patch
     by Daniel Scheibli (implements the code changes suggested by 
     Dough Haigh to solve the performance drop in network tests on
     Solaris - see bug report #881675).
   - iometer-1216.post.ds1.kstat-patch by Ming Zhang (major collective 
     patch which
     a.) introduces the iomtr_kstat kernel module for Linux 
     b.) adds support for parsing the Linux 2.4 and 2.6 style
         /proc/stat file - as suggested by Dmitry Yusupov