@@ -8,6 +8,8 @@ ChangeLog (2004.nn.nn):
 =======================
 
 - Applied patches:
+   - iometer.ppc.patch by Dan Bar Dov (adds support for Dynamo to run
+     on Linux / PowerPC).
    - netware_cpp.patch by Thayne Harmon (adds a part of the Netware
      support - actually it adds the code file changes).
    - netware_h.patch by Thayne Harmon (adds a part of the Netware
